crates/analyzer/tests/snapshots/errors__clone_arg_count.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: No function `clone` exists on type `Array<u256, 2>`
  ┌─ [snippet]:4:29
  │
4 │   let y: Array<u256, 2> = x.clone(y)
  │                             ^^^^^ undefined function


